force-app/main/default/objects/Application__c/fields/Applied_On__c.field-meta.xml
<CustomField>
    <fullName>Applied_On__c</fullName>
    <label>Applied On</label>
    <type>Date</type>
</CustomField>