force-app/main/default/objects/Application__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contributor</label>
    <referenceTo>Contributor__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>