force-app/main/default/objects/Application__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>