force-app/main/default/objects/Application__c/validationRules/Approved_Application_Requires_Reviewer.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Application_Requires_Reviewer</fullName>
    <active>true</active>
    <description>Approved applications must have a reviewer assigned.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Approved&quot;),
ISBLANK(Reviewer__c)
)</errorConditionFormula>
    <errorDisplayField>Reviewer__c</errorDisplayField>
    <errorMessage>Please assign a Reviewer before approving the application.</errorMessage>
</ValidationRule>