force-app/main/default/objects/Application__c/validationRules/Priority_Score_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_Score_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents negative priority scores.</description>
    <errorConditionFormula>Priority_Score__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Priority_Score__c</errorDisplayField>
    <errorMessage>Priority Score cannot be less than 0.</errorMessage>
</ValidationRule>