force-app/main/default/objects/Application__c/validationRules/Rejected_Application_Requires_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Application_Requires_Comments</fullName>
    <active>true</active>
    <description>Rejected applications must include review comments.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Rejected&quot;),
ISBLANK(Review_Comments__c)
)</errorConditionFormula>
    <errorDisplayField>Review_Comments__c</errorDisplayField>
    <errorMessage>Review Comments are required when rejecting an application.</errorMessage>
</ValidationRule>